--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,59 @@
-@import url("https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Kodchasan";
+  src:
+    local("Kodchasan"),
+    url("./fonts/Kodchasan-Regular.ttf") format("opentype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Kodchasan";
+  src: url("./fonts/Kodchasan-Bold.ttf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Kodchasan";
+  src: url("./fonts/Kodchasan-Medium.ttf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Kodchasan";
+  src: url("./fonts/Kodchasan-SemiBold.ttf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+
 body {
   font-family: "Kodchasan";
+}
+
+.chatbox {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #333;
+}
+
+.chatbox::-webkit-scrollbar {
+  width: 8px;
+}
+
+.chatbox::-webkit-scrollbar-track {
+  background: #333;
+}
+
+.chatbox::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #333;
+}
+
+.chatbox::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
 }
